Fix spacing on title field

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,3 +1,6 @@
+#postbox-container-2 {
+	margin-top: 20px;
+}
 .quantity_field {
     display: none;
 }
